--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -29,6 +29,8 @@
 		<i>無限に広がる無限の掲示板と画像掲示板、モッドちゃんねるへようこそ</i>
 		<br><br>
 		モッドちゃんねるでは、経験やプログラミングの知識がなくても、独自の画像掲示板や掲示板を無料で作成できます。
+		<br><br>
+		アカウント欄（鍵）をクリックすると、自分のボードを作成することができます。より詳しい情報は<a href="/.static/pages/moderation.html">こちら</a>をご覧ください。
 		<br><br><br>
 		<span class="tagLine">こにちは/ int / !!</span>
 	</p>
