--- a/templates/content/footer.html
+++ b/templates/content/footer.html
@@ -16,5 +16,7 @@
 	+
 	<a class="coloredIcon"
 		id="linkFrontend"
-		href="//gitgud.io/8chan/Aleph"></a>
+		href="//gitgud.io/Tsar/Modchan"></a>
+    <br>
+    © Cocora Inc. 
 </div>
