--- a/templates/content/footerAlt.html
+++ b/templates/content/footerAlt.html
@@ -23,5 +23,5 @@
 	+
 	<a class="coloredIcon"
 		id="linkFrontend"
-		href="//gitgud.io/8chan/Aleph"></a>
+		href="//gitgud.io/Tsar/Modchan"></a>
 </div>
