--- a/templates/content/headerBoard.html
+++ b/templates/content/headerBoard.html
@@ -1,33 +1,33 @@
 <span id="navLinkSpan"> <span>[</span> <a
     href="/"
     class="coloredIcon"
-    title="Home"
+    title="ホーム"
     id="navLinkHome"></a> <span>/</span> <a
     href="/boards.js"
     class="coloredIcon"
-    title="Boards"
+    title="ボード"
     id="navBoardList"></a> <span>/</span> <a
     href="/overboard"
     class="coloredIcon"
-    title="Overboard"
+    title="オーバーボード"
     id="linkOverboard"></a> <span>/</span> <a
     href="/sfw"
     class="coloredIcon"
-    title="SFW Overboard"
+    title="SFWオーバーボード"
     id="linkSfwOver"></a> <span>/</span> <a
     href="/.static/pages/posting.html"
     class="coloredIcon"
-    title="Posting"
+    title="投稿"
     id="navPosting"></a> <span>/</span> <a
     class="coloredIcon"
-    title="You need JavaScript enabled to use this feature"
+    title="この機能を使用するには、JavaScriptを有効にする必要があります"
     id="settingsButton"></a> <span>/</span> <a
     class="coloredIcon"
-    title="You need JavaScript enabled to use this feature"
+    title="この機能を使用するには、JavaScriptを有効にする必要があります"
     id="watcherButton"></a> <span>/</span> <a
     href="/account.js"
     class="coloredIcon"
-    title="User Account"
+    title="ユーザーアカウント"
     id="navMod"></a> <span>]</span>
 </span>
 <span id="navTopBoardsSpan"> </span>
