--- a/templates/content/headerThread.html
+++ b/templates/content/headerThread.html
@@ -17,17 +17,17 @@
     id="linkSfwOver"></a> <span>/</span> <a
     href="/.static/pages/posting.html"
     class="coloredIcon"
-    title="Posting"
+    title="投稿"
     id="navPosting"></a> <span>/</span> <a
     class="coloredIcon"
-    title="You need JavaScript enabled to use this feature"
+    title="この機能を使用するには、JavaScriptを有効にする必要があります"
     id="settingsButton"></a> <span>/</span> <a
     class="coloredIcon"
-    title="You need JavaScript enabled to use this feature"
+    title="この機能を使用するには、JavaScriptを有効にする必要があります"
     id="watcherButton"></a> <span>/</span> <a
     href="/account.js"
     class="coloredIcon"
-    title="User Account"
+    title="ユーザーアカウント"
     id="navMod"></a> <span>]</span>
 </span>
 <span id="navTopBoardsSpan"> </span>
