--- a/templates/content/links.html
+++ b/templates/content/links.html
@@ -4,7 +4,7 @@
   id="linkGlobalLogs"></a>
 <span>•</span>
 <a
-  href="//archive.today/http://8chan.moe/*"
+  href="//archive.today/http://modchan.org/*"
   class="coloredIcon"
   id="linkArchives"></a>
 <span>•</span>
