--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -45,7 +45,7 @@
 	</fieldset>
 
 	<fieldset class="titleFieldset">
-	<legend>Stats</legend>
+	<legend>統計</legend>
     <div id="divStats">
       <span>投稿総数：<span id="labelTotalPosts"></span></span>
       <span>過去1時間の投稿：<span id="labelTotalPPH"></span></span>
