--- a/templates/content/header.html
+++ b/templates/content/header.html
@@ -17,7 +17,7 @@
     id="linkSfwOver"></a> <span>/</span> <a
     href="/.static/pages/posting.html"
     class="coloredIcon"
-    title="Posting"
+    title="投稿"
     id="navPosting"></a> <span>/</span> <a
     class="coloredIcon"
     title="この機能を使用するには、JavaScriptを有効にする必要があります"
@@ -27,7 +27,7 @@
     id="watcherButton"></a> <span>/</span> <a
     href="/account.js"
     class="coloredIcon"
-    title="User Account"
+    title="ユーザーアカウント"
     id="navMod"></a> <span>]</span> 
 </span>
 <span id="navTopBoardsSpan"> </span>
