--- a/templates/cells/banCell.html
+++ b/templates/cells/banCell.html
@@ -13,7 +13,7 @@
   理由: <span class="reasonLabel"></span>
 </p>
 <p class="boardPanel">
-  ボード：<span class="boardLabel"></span>
+  掲示板：<span class="boardLabel"></span>
 </p>
 <p id="expirationPanel">
   有効期限: <span class="expirationLabel"></span>
