--- a/templates/cells/boardsCell.html
+++ b/templates/cells/boardsCell.html
@@ -1,6 +1,6 @@
 <hr />
 <span class="boardsCellHeader"> <a class="linkBoard"></a> <span
-  class="indicatorSfw">*SFW*</span> <span class="indicatorInactive">*放棄された*</span>
+  class="indicatorSfw">*わいせつではない*</span> <span class="indicatorInactive">*放棄された*</span>
 
   <span class="divDescription"></span> <span class="boardsCellTags"> <span
     class="labelTags"></span>
