--- a/templates/cells/logCell.html
+++ b/templates/cells/logCell.html
@@ -5,7 +5,7 @@
   ユーザー: <span class="labelUser"></span>
 </p>
 <p>
-  ボード: <span class="labelBoard"></span>
+  掲示板: <span class="labelBoard"></span>
 </p>
 <p>
   時間: <span class="labelTime"></span>
