--- a/templates/cells/reportCell.html
+++ b/templates/cells/reportCell.html
@@ -1,5 +1,5 @@
 <label>
-  ボード: <span class="boardLabel"></span>
+  掲示板: <span class="boardLabel"></span>
 </label>
 <label class="categoryDiv">
   カテゴリー: <span class="categoryLabel"></span>
