--- a/templates/content/actionsForm.html
+++ b/templates/content/actionsForm.html
@@ -222,7 +222,7 @@
       type="submit"
       id="inputIpDelete"
       value="ip-deletion"
-      name="action">このボードのIP/バイパスで削除</button>
+      name="action">この掲示板のIP/バイパスで削除</button>
 
     <button
       type="submit"
