--- a/templates/content/footerAlt.html
+++ b/templates/content/footerAlt.html
@@ -4,13 +4,13 @@
 		アップロードされた画像はポスターの責任です。
 		コメントは投稿者が所有します。
 		<br>
-		このサイトを閲覧することは、グローバルルールおよび適用される取締役会ルールを順守することに同意したものと見なされます。
+		このサイトを閲覧することは、規約および適用される取締役会ルールを順守することに同意したものと見なされます。
     </div>
     <a href="/.static/pages/about.html">情報</a>
     •
-    <a href="/site/res/27.html#">フィードバック</a>
+    <a href="/site/pages/advertisement.html">広告枠問い合わせ</a>
     •
-    <a href="/.static/pages/globalRules.html">グローバルルール</a>
+    <a href="/.static/pages/globalRules.html">規約</a>
     •
     <a href="/.static/pages/legal.html">法的</a>
     •
@@ -18,10 +18,5 @@
     •
     <a href="/.static/pages/donate.html">寄付</a>
 	<br>
-	<a class="coloredIcon"
-		id="linkEngine"></a>
-	+
-	<a class="coloredIcon"
-		id="linkFrontend"
-		href="//gitgud.io/Tsar/Modchan"></a>
+    © Cocora Inc. 
 </div>
