--- a/templates/content/header.html
+++ b/templates/content/header.html
@@ -5,15 +5,15 @@
     id="navLinkHome"></a> <span>/</span> <a
     href="/boards.js"
     class="coloredIcon"
-    title="ボード"
+    title="掲示掲示板"
     id="navBoardList"></a> <span>/</span> <a
     href="/overboard"
     class="coloredIcon"
-    title="オーバーボード"
+    title="オーバー掲示板"
     id="linkOverboard"></a> <span>/</span> <a
     href="/sfw"
     class="coloredIcon"
-    title="SFWオーバーボード"
+    title="わいせつではないオーバー掲示板"
     id="linkSfwOver"></a> <span>/</span> <a
     href="/.static/pages/posting.html"
     class="coloredIcon"
