--- a/templates/content/headerBoard.html
+++ b/templates/content/headerBoard.html
@@ -5,15 +5,15 @@
     id="navLinkHome"></a> <span>/</span> <a
     href="/boards.js"
     class="coloredIcon"
-    title="ボード"
+    title="掲示掲示板"
     id="navBoardList"></a> <span>/</span> <a
     href="/overboard"
     class="coloredIcon"
-    title="オーバーボード"
+    title="オーバー掲示板"
     id="linkOverboard"></a> <span>/</span> <a
     href="/sfw"
     class="coloredIcon"
-    title="SFWオーバーボード"
+    title="わいせつではないオーバー掲示板"
     id="linkSfwOver"></a> <span>/</span> <a
     href="/.static/pages/posting.html"
     class="coloredIcon"
@@ -28,25 +28,25 @@
     href="/account.js"
     class="coloredIcon"
     title="ユーザーアカウント"
-    id="navMod"></a> <span>]</span>
+    id="navMod"></a> <span>]</span> 
 </span>
 <span id="navTopBoardsSpan"> </span>
 <span id="navBoardsSpan"> </span>
 <span id="navOptionsSpan"> <span>[</span> <a
 	class="coloredIcon"
-	title="Logs"
+	title="ログ"
 	id="linkLogs"></a> <span>/</span> <a
 	href="#"
 	class="coloredIcon"
-	title="Top"
+	title="上"
 	id="linkTop"></a> <span>/</span> <a
 	href="#footer"
 	class="coloredIcon"
-	title="Bottom"
+	title="下"
 	id="linkBottom"></a> <span>/</span> <a
 	href="catalog.html"
 	class="coloredIcon"
-	title="Catalog"
+	title="カタログ"
 	id="navCatalog"></a> <span>/</span> <a 
 	href="index.rss"
 	class="coloredIcon"
