--- a/templates/content/headerThread.html
+++ b/templates/content/headerThread.html
@@ -1,19 +1,19 @@
 <span id="navLinkSpan"> <span>[</span> <a
     href="/"
     class="coloredIcon"
-    title="Home"
+    title="ホーム"
     id="navLinkHome"></a> <span>/</span> <a
     href="/boards.js"
     class="coloredIcon"
-    title="Boards"
+    title="掲示掲示板"
     id="navBoardList"></a> <span>/</span> <a
     href="/overboard"
     class="coloredIcon"
-    title="Overboard"
+    title="オーバー掲示板"
     id="linkOverboard"></a> <span>/</span> <a
     href="/sfw"
     class="coloredIcon"
-    title="SFW Overboard"
+    title="わいせつではないオーバー掲示板"
     id="linkSfwOver"></a> <span>/</span> <a
     href="/.static/pages/posting.html"
     class="coloredIcon"
@@ -28,7 +28,7 @@
     href="/account.js"
     class="coloredIcon"
     title="ユーザーアカウント"
-    id="navMod"></a> <span>]</span>
+    id="navMod"></a> <span>]</span> 
 </span>
 <span id="navTopBoardsSpan"> </span>
 <span id="navBoardsSpan"> </span>
@@ -39,14 +39,14 @@
 	class="hideMobile coloredIcon"></a> <span>/</span> <a
 	href="#"
 	id="linkTop"
-	title="Top"
+	title="上"
 	class="coloredIcon"></a> <span>/</span> <a
 	href="#footer"
 	id="linkBottom"
-	title="Bottom"
+	title="下"
 	class="coloredIcon"></a> <span>/</span> <a
 	href="../catalog.html"
 	id="navCatalog"
-	title="Catalog"
+	title="カタログ"
 	class="coloredIcon"></a> <span>]</span>
 </span> 
