--- a/templates/pages/accountManagement.html
+++ b/templates/pages/accountManagement.html
@@ -36,12 +36,12 @@
       <br>
       グローバルな役割：<span id="globalRoleLabel"></span>
       <hr>
-      <h3>所有するボード</h3>
+      <h3>所有する掲示板</h3>
       <div
         id="ownedBoardsDiv"
         class="linkList"></div>
       <hr>
-      <h3>ボランティアボード</h3>
+      <h3>ボランティア掲示板</h3>
       <div
         id="volunteeredBoardsDiv"
         class="linkList"></div>
@@ -60,7 +60,7 @@
               type="checkbox"
               class="deleteAccountField"
               name="confirmation">
-            はい、このユーザーのボードをすべて私に転送してから、アカウントを削除したいと
+            はい、このユーザーの掲示板をすべて私に転送してから、アカウントを削除したいと
             思います。
           </label>
 
