--- a/templates/pages/board.html
+++ b/templates/pages/board.html
@@ -86,8 +86,8 @@
         <br>
 
         <span id="boardContentLinks" class="innerUtility">
-          <a id="linkManagement">ボードの管理</a>
-          <a id="linkModeration">モデレートボード</a>
+          <a id="linkManagement">掲示板の管理</a>
+          <a id="linkModeration">モデレート掲示板</a>
           <a id="linkMod">中程度のスレッド</a>
         </div>
 
