--- a/templates/pages/boardManagement.html
+++ b/templates/pages/boardManagement.html
@@ -33,7 +33,7 @@
         <a href="/account.js">アカウント</a>
       </p>
       <p>
-        <a id="linkSelf">ボードのフロントページ</a>
+        <a id="linkSelf">掲示板のフロントページ</a>
       </p>
 
       <div id="ownerControlDiv">
@@ -97,13 +97,13 @@
 
           <button
             type="submit"
-            id="transferBoardFormButton">トランスファーボード</button>
+            id="transferBoardFormButton">トランスファー掲示板</button>
 
         </form>
 
         <hr />
 
-        <h3>ボードを削除</h3>
+        <h3>掲示板を削除</h3>
 
         <form
           method="post"
@@ -116,7 +116,7 @@
               class="deleteBoardField"
               name="confirmDeletion"
               id="confirmDelCheckbox">
-            はい、このボードを削除したいです
+            はい、この掲示板を削除したいです
           </label>
 
           <input
@@ -126,7 +126,7 @@
 
           <button
             type="submit"
-            id="deleteBoardFormButton">ボードを削除</button>
+            id="deleteBoardFormButton">掲示板を削除</button>
 
         </form>
 
@@ -197,7 +197,7 @@
         <p>カスタムスポイラーを削除するには、ファイルなしでアップロードします</p>
 
         <div id="customSpoilerIndicator">
-          <p>このボード用に保存されたカスタムスポイラーがあります</p>
+          <p>この掲示板用に保存されたカスタムスポイラーがあります</p>
         </div>
 
         <form
@@ -294,7 +294,7 @@
           id="resetLockIdentifier">
         <button
           type="submit"
-          id="resetLockButton">自動ボードロックをリセット</button>
+          id="resetLockButton">自動掲示板ロックをリセット</button>
       </form>
 
 
@@ -314,7 +314,7 @@
           name="boardUri">
 
         <label>
-          ボード名：
+          掲示板名：
           <input
             id="boardNameField"
             class="boardSettingsField"
@@ -323,7 +323,7 @@
         </label>
 
         <label>
-          ボードの説明：
+          掲示板の説明：
           <input
             id="boardDescriptionField"
             name="boardDescription"
@@ -434,7 +434,7 @@
         </label>
 
         <label>
-          ボードメッセージ（最大長：<span id="messageLengthLabel"></span>）：
+          掲示板メッセージ（最大長：<span id="messageLengthLabel"></span>）：
           <textarea
             name="boardMessage"
             id="boardMessageField"
@@ -486,7 +486,7 @@
             name="textBoard"
             class="boardSettingsField"
             id="textBoardCheckbox">
-          テキスト掲示板
+          テキスト掲示掲示板
         </label>
 
         <label>
@@ -513,7 +513,7 @@
             class="boardSettingsField"
             name="unindex"
             id="unindexCheckbox">
-          トップボードとボードリストにインデックスを付けないでください。
+          トップ掲示板と掲示板リストにインデックスを付けないでください。
         </label>
 
         <label>
@@ -557,7 +557,7 @@
           id="saveSettingsFormButton">Save</button>
 
         <p>1：要素をコンマで区切ります</p>
-        <p>2：バインドされていないボード設定が有効になっていない限り、
+        <p>2：バインドされていない掲示板設定が有効になっていない限り、
           値がグローバル同等物よりも大きいか、
           グローバル同等物に存在しない場合は
           無視されます</p>
