--- a/templates/pages/boardModeration.html
+++ b/templates/pages/boardModeration.html
@@ -67,13 +67,13 @@
             id="boardTransferIdentifier">
           <button
             type="submit"
-            id="transferFormButton">トランスファーボード</button>
+            id="transferFormButton">トランスファー掲示板</button>
 
         </form>
       </div>
       <hr>
       <div>
-        <p class="title">ボードの削除</p>
+        <p class="title">掲示板の削除</p>
         <form
           method="post"
           action="/deleteBoard.js"
@@ -84,7 +84,7 @@
               class="deleteBoardField"
               name="confirmDeletion"
               id="confirmDelCheckbox">
-            はい、このボードを削除したいです
+            はい、この掲示板を削除したいです
           </label>
           <input
             type="hidden"
@@ -92,7 +92,7 @@
             id="boardDeletionIdentifier">
           <button
             type="submit"
-            id="deleteFormButton">ボードを削除</button>
+            id="deleteFormButton">掲示板を削除</button>
 
         </form>
       </div>
@@ -109,7 +109,7 @@
               class="specialSettingsField"
               name="sfw"
               id="checkboxSfw">
-            SFWボード
+            わいせつではない掲示板
           </label>
           <label>
             <input
