--- a/templates/pages/boards.html
+++ b/templates/pages/boards.html
@@ -26,7 +26,7 @@
   <div class="titleWrapper" id="boardsWrapper">
 
     <fieldset class="titleFieldset">
-      <legend>ボード</legend>
+      <legend>掲示板</legend>
       <form
         action="/boards.js"
         method="get">
@@ -34,7 +34,7 @@
           <input
             type="text"
             name="boardUri"
-            placeholder="ボード">
+            placeholder="掲示板">
 
           <input
             type="text"
@@ -56,26 +56,26 @@
           <input
             type="checkbox"
             name="sfw">
-          SFWボードのみ
+          わいせつではない掲示板のみ
 		</label>
 
 		<label>
           <input
             type="checkbox"
             name="unindexed">
-          インデックス付けされていないボードのみ
+          インデックス付けされていない掲示板のみ
 		</label>
 
 		<label>
           <input
             type="checkbox"
             name="inactive">
-          放棄されたボードのみ
+          放棄された掲示板のみ
 		</label>
 
         <input
           type="submit"
-          value="Search">
+          value="検索">
 
       </form>
 
