--- a/templates/pages/globalSettings.html
+++ b/templates/pages/globalSettings.html
@@ -786,7 +786,7 @@
             id="fieldOverboard">
         </label>
         <label>
-          SFW overboard uri:
+          わいせつではない overboard uri:
           <input
             type="text"
             class="globalSettingsField"
@@ -996,9 +996,9 @@
           <input
             type="checkbox"
             class="globalSettingsField"
-            id="checkboxSFWLatestImages"
+            id="checkboxわいせつではないLatestImages"
             name="onlySfwLatestImages">
-          Display only SFW images on the front-page
+          Display only わいせつではない images on the front-page
         </label>
         <label>
           <input
