--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -26,11 +26,11 @@
 		</div>
 
         <p>
-		<i>無限に広がる無限の掲示板と画像掲示板、モッドちゃんねるへようこそ</i>
+		<i>無限に広がる無限の掲示掲示板、モッドちゃんねるへようこそ</i> 
 		<br><br>
-		モッドちゃんねるでは、経験やプログラミングの知識がなくても、独自の画像掲示板や掲示板を無料で作成できます。
+		モッドちゃんねるを使用すると、プログラミングの知識がなくても、無料で独自の掲示掲示板を作成できます。
 		<br><br>
-		アカウント欄（鍵）をクリックすると、自分のボードを作成することができます。より詳しい情報は<a href="/.static/pages/moderation.html">こちら</a>をご覧ください。
+		アカウント欄（鍵）をクリックすると、自分の掲示板を作成することができます。より詳しい情報は<a href="/.static/pages/moderation.html">こちら</a>をご覧ください。
 		<br><br><br>
 		<span class="tagLine">こにちは/ int / !!</span>
 	</p>
@@ -50,14 +50,14 @@
       <span>投稿総数：<span id="labelTotalPosts"></span></span>
       <span>過去1時間の投稿：<span id="labelTotalPPH"></span></span>
       <span>ユニークな最近のIP：<span id="labelTotalIps"></span></span>
-      <span>ボードの総数：<span id="labelTotalBoards"></span></span>
+      <span>掲示板の総数：<span id="labelTotalBoards"></span></span>
       <span>保存されているメディアファイル：<span id="labelTotalFiles"></span></span>
       <span>合計メディアサイズ：<span id="labelTotalSize"></span></span>
     </div>
 	</fieldset>
 
 	<fieldset class="titleFieldset">
-	<legend>トップボード</legend>
+	<legend>トップ掲示板</legend>
     <div
       id="divBoards"
       class="topBoards title"></div>
