--- a/templates/pages/latestPostings.html
+++ b/templates/pages/latestPostings.html
@@ -43,8 +43,8 @@
         <span id="panelIp"> IP: <input
             type="text"
             name="ip"
-            id="fieldIp"> <br></span> ボード（コンマで区切る場合は、
-         空の場合、すべてのボードがチェックされます）：
+            id="fieldIp"> <br></span> 掲示板（コンマで区切る場合は、
+         空の場合、すべての掲示板がチェックされます）：
         <input
           id="fieldBoards"
           type="text"
