--- a/templates/pages/logsIndex.html
+++ b/templates/pages/logsIndex.html
@@ -34,7 +34,7 @@
           method="get"
           action="logs.js">
           <label>
-            Year
+            年
             <input
               type="text"
               name="year"
@@ -46,7 +46,7 @@
           </label>
           <input
             type="submit"
-            value="Search">
+            value="検索">
         </form>
       </div>
       <hr />
