--- a/templates/pages/rules.html
+++ b/templates/pages/rules.html
@@ -35,7 +35,7 @@
       <div id="divRules"></div>
       <p>
         取締役会の規則に関係なく、すべて
-        <a href="/.static/pages/globalRules.html">グローバルルール</a>
+        <a href="/.static/pages/globalRules.html">規約</a>
         申し込み
       </p>
 
