--- a/templates/pages/thread.html
+++ b/templates/pages/thread.html
@@ -51,7 +51,7 @@
     </header>
 
 	<div class="innerUtility top">
-		<a href="../">Index</a>
+		<a href="../">インデックス</a>
 		<a href="../catalog.html">カタログ</a>
 		<a target="_blank" class="archiveLinkThread">アーカイブ</a>
 		<a class="navButton" href="#footer">下</a>
@@ -210,7 +210,7 @@
             id="transferThreadIdentifier">
 
           <label>
-            デスティネーションボード：
+            デスティネーション掲示板：
             <input
               type="text"
               class="transferField"
@@ -289,8 +289,8 @@
               id="ipField">
           </label>
           <label>
-            これらのボードからのみ削除します（例： "bv";空白のままにすると削除されます
-            すべてのボードから）
+            これらの掲示板からのみ削除します（例： "bv";空白のままにすると削除されます
+            すべての掲示板から）
             <input
               type="text"
               class="ipDeletionField"
@@ -364,7 +364,7 @@
         </div>
 
         <div id="boardContentLinks" class="innerUtility">
-          <a id="linkManagement">ボードの管理</a>
+          <a id="linkManagement">掲示板の管理</a>
           <a id="linkMod">中程度のスレッド</a>
         </div>
 
