--- a/templates/content/footer.html
+++ b/templates/content/footer.html
@@ -1,9 +1,9 @@
 <div id="footer">
     <a href="/.static/pages/about.html">情報</a>
     •
-    <a href="/site/res/27.html#">フィードバック</a>
+    <a href="/site/pages/advertisement.html">広告枠問い合わせ</a>
     •
-    <a href="/.static/pages/globalRules.html">グローバルルール</a>
+    <a href="/.static/pages/globalRules.html">規約</a>
     •
     <a href="/.static/pages/legal.html">法的</a>
     •
@@ -11,12 +11,5 @@
     •
     <a href="/.static/pages/donate.html">寄付</a>
 	<br>
-	<a class="coloredIcon"
-		id="linkEngine"></a>
-	+
-	<a class="coloredIcon"
-		id="linkFrontend"
-		href="//gitgud.io/Tsar/Modchan"></a>
-    <br>
     © Cocora Inc. 
 </div>
