--- a/templates/pages/archivePage.html
+++ b/templates/pages/archivePage.html
@@ -32,7 +32,7 @@
       <form
         action="/archives.js"
         method="GET">
-        ボード：
+        掲示板：
         <input
           name="boards"
           id="fieldBoards"
