--- a/templates/pages/boardManagement.html
+++ b/templates/pages/boardManagement.html
@@ -486,7 +486,7 @@
             name="textBoard"
             class="boardSettingsField"
             id="textBoardCheckbox">
-          テキスト掲示掲示板
+          テキスト掲示板
         </label>
 
         <label>
